--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -27,7 +27,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin: 15rem 0 2rem 0;
+        margin: 10rem 0 2rem 0;
     }
 
     .about-social_icons {
