--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -9,13 +9,19 @@
 /* Left Container */
 
 .left-container {
-    margin-left: 16rem;
-    padding-top: 10rem;
+    /* margin-left: 16rem; */
+    /* padding-top: 10rem; */
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
 }
 
 .home-heading {
     color: #fff;
     font-size: 7.5rem;
+    margin-top: 5rem;
+    grid-column: 2/4;
+    grid-row: 1/2;
 }
 
 .home-heading_name {
@@ -25,7 +31,9 @@
 .home-bio {
     color: var(--font-clr-secondary);
     font-size: 3.2rem;
-    margin: 4.5rem 0 6.5rem 0;
+    margin-top: 5rem;
+    grid-column: 2/5;
+    grid-row: 2/3;
 }
 
 .home-btn {
@@ -33,10 +41,13 @@
     font-size: 3rem;
     color: #fff;
     background-color: var(--font-clr-primary);
-    padding: 2.2rem 3.8rem;
     border-radius: 10rem;
     border: none;
     cursor: pointer;
+    grid-column: 2/4;
+    grid-row: 3/4;
+    max-height: 10.5rem;
+    max-width: 30rem;
 }
 
 .home-btn:hover {
@@ -48,7 +59,7 @@
 /* Image  */
 .profile-img {
     width: 100%;
-    max-width: 75rem;
+    max-width: 70rem;
     height: auto;
 
     position: absolute;
@@ -56,28 +67,16 @@
     top: 0;
 }
 
-.profile-img img {
-    overflow: hidden;
-    background-size: cover;
+.profile-img_mobile {
+    display: none;
 }
-
-
 
 
 /* Media Query  */
 
 @media screen and (max-width: 1115px) {
-
-    .home {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin-left: -12rem;
-    }
-
-
     .home-bio {
         font-size: 2.8rem;
-        margin: 2.5rem 0 3.7rem 0;
     }
 
     .home-btn {
@@ -122,7 +121,42 @@
 
 @media screen and (max-width: 680px) {
 
+
+
+    .left-container,
+    .home {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .home-heading {
+        margin-top: 12rem;
+    }
+
+    .home-bio {
+        margin-bottom: 7rem;
+        margin-inline: 2rem;
+        font-size: 2.4rem;
+
+    }
+
+    .home-btn {
+        padding: 2.5rem 5.2rem;
+    }
+
+
     .profile-img {
         display: none;
+    }
+
+    .profile-img_mobile {
+        width: 100%;
+        max-width: 30rem;
+        height: auto;
+        display: flex;
+        border-radius: 25rem;
+        margin-top: 8rem;
     }
 }
